sort.basic.insertion.AlgInsertionSort.scala.error
Erreur de compilation :
AlgInsertionSort:7: error: not found: value i
    while(i<(lgr - 1)){
          ^AlgInsertionSort:9: error: not found: value i
      v = getValeur(i);
                    ^AlgInsertionSort:10: error: not found: value i
      while(j< i-1 && !fini){
               ^AlgInsertionSort:12: error: not found: value i
        if (plusPetit(v,getValeur(i-j))){
                                  ^AlgInsertionSort:13: error: not found: value i
          echange(i-j,i-j-1);
                  ^AlgInsertionSort:13: error: not found: value i
          echange(i-j,i-j-1);
                      ^AlgInsertionSort:18: error: not found: value i
      setValeur(i-j-1,v);
                ^